# generalist

./: .gitignore  Cargo.toml  README.md  SYSTEM_PROMPT.md
src/: chat_ui.rs  client.rs  error.rs  execution.rs  lib.rs  main.rs  main.rs.orig  message.rs  permissions.rs  request.rs  state.rs  tool.rs
src/tools/: academic_search.rs  bash.rs  calculator.rs  enhanced_memory.rs  firecrawl_crawl.rs  firecrawl_extract.rs  firecrawl_map.rs  firecrawl_search.rs  http_fetch.rs  list_directory.rs  memory.rs  mod.rs  news_search.rs  patch_file.rs  read_file.rs  still_thinking.rs  system_info.rs  think.rs  todo.rs  weather.rs  web_search.rs  wikipedia.rs  z3_solver.rs
tests/: academic_search_test.rs  api_parsing_test.rs  news_search_test.rs  tool_argument_edge_cases.rs  tool_call_test.rs  web_search_test.rs
