[package]
name = "claude"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dialoguer = "0.11"
indicatif = "0.17"
console = "0.15"
colored = "2.2"
dotenv = "0.15.0"
exmex = "0.20"
urlencoding = "2.1"
url = "2.5"
uuid = { version = "1.17.0", features = ["v4"] }
serenity = "0.12.4"
tempfile = "3.8"
z3 = "0.12"

[[bin]]
name = "chatbot"
path = "src/main.rs"

[[example]]
name = "discord_bot"
path = "examples/discord_bot.rs"
