[package]
name = "claude"
version = "0.1.0"
edition = "2021"
authors = ["Samuel Schlesinger <sgschlesinger@gmail.com>"]
description = "A Rust client library for Anthropic's Claude AI API with tool support. A generalist CLI agent implementation using this API."
homepage = "https://github.com/SamuelSchlesinger/generalist"
repository = "https://github.com/SamuelSchlesinger/generalist"
license = "MIT"
readme = "README.md"
keywords = ["claude", "anthropic", "ai", "chatbot", "tools"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dialoguer = "0.11"
indicatif = "0.17"
console = "0.15"
colored = "2.2"
dotenv = "0.15.0"
exmex = "0.20"
urlencoding = "2.1"
url = "2.5"
uuid = { version = "1.17.0", features = ["v4"] }
serenity = "0.12.4"
tempfile = "3.8"
z3 = "0.12"
firecrawl = "1.2.0"

[[bin]]
name = "generalist"
path = "src/main.rs"
